# dj_mailing_project

./: .env-sample  .gitignore  pyproject.toml  readme.md
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
fixtures/: clients.json  groups.json  mailing.json  mailingtext.json  managers.json  permissions.json  status.json  user.json
json_data/: blog.json  client.json  mailing.json  mailingtext.json  permission.json  user.json
mailing/: admin.py  apps.py  create_task.py  cron.py  crontab.py  forms.py  models.py  services.py  urls.py
mailing/migrations/: 0001_initial.py  0002_remove_mailingattempt_mailing_mailing_client_and_more.py  0003_remove_mailing_client_mailing_clients.py  0004_remove_mailing_last_attempt_alter_mailing_options_and_more.py  0005_rename_is_active_mailing_status_of_mailing.py  0006_mailing_owner_alter_mailing_status_of_mailing.py  0007_mailingtext_company.py  0008_alter_status_options.py  0009_rename_status_status_last_attempt_status.py  0010_rename_answer_mailing_is_active.py  0011_alter_mailing_options.py  0012_alter_client_options_client_is_active.py  0013_alter_client_options_alter_mailing_options_and_more.py  0014_alter_mailing_options_alter_mailingtext_options_and_more.py  0015_alter_client_options.py  0016_alter_mailing_options.py  0017_alter_mailing_options.py  0018_alter_client_options.py  0019_alter_mailing_options.py  0020_alter_mailing_options.py
mailing/templatetags/: my_tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
(+33 files in other folders)
