[tool.poetry]
name = "dj-mailing-project"
version = "0.1.0"
description = ""
authors = ["panthurr0 <olapopaola@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
django-apscheduler = "^0.6.2"
crispy-bootstrap4 = "^2024.1"
redis = "^5.0.4"
django-crontab = "^0.7.1"
pytz = "^2024.1"
django-bootstrap-datepicker-plus = "^5.0.5"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
